1 bug left: GET /clear